rule to build individual .cpp and all tests in the tests folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 # Sub-projects
 ################################################################################
 add_subdirectory(LP)
+add_subdirectory(tests)
 
 ################################################################################
 # Suppresse Zero_check
